--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,6 +32,6 @@ body {
 .team__flag--small {
   height: 1.4rem;
   margin-right: .3rem;
-  border: solid 1px var(--border-color);
-  border-radius: 0.3rem;
+  //border: solid 1px var(--border-color);
+  //border-radius: 0.3rem;
 }
