--- a/src/app/components/shared/match/match.component.scss
+++ b/src/app/components/shared/match/match.component.scss
@@ -1,6 +1,6 @@
 .match__container {
   display: grid;
-  grid-template-columns: 5rem 7rem 3rem 2rem 1rem 2rem 3rem 7rem 5rem; //34rem
+  grid-template-columns: 5rem 7rem 3rem 4rem 1rem 4rem 3rem 7rem 5rem;
   justify-content: center;
   justify-items: center;
   align-items: center;
