Fill Round Of 16 Matches

--- a/src/app/components/shared/match/match.component.html
+++ b/src/app/components/shared/match/match.component.html
@@ -68,7 +68,7 @@
   <div class="match__container__small__main">
     <div class="match__container__small_flag__name">
       <img src="{{matchDetails.fistTeam.flag}}" alt="" class="team__flag--small">
-      <div class="team__name">{{matchDetails.fistTeam.name}}blabla</div>
+      <!--      <div class="team__name">{{matchDetails.fistTeam.name}}</div>-->
     </div>
     <div class="cell">
       {{matchDetails.fistTeam.goals}}
@@ -79,7 +79,7 @@
     </div>
     <div class="match__container__small_flag__name">
       <img src="{{matchDetails.secondTeam.flag}}" alt="" class="team__flag--small">
-      <div class="team__name">{{matchDetails.secondTeam.name}}blabla</div>
+      <!--      <div class="team__name">{{matchDetails.secondTeam.name}}</div>-->
     </div>
   </div>
 </div>
