--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -58,7 +58,7 @@
       </mat-form-field>
     </div>
     <div *ngFor="let match of selectedStageMatches">
-      <app-match [match]="match" [stages]="stages" [groupsDetails]="groupsDetails" [small]="false" (updatedMatchEmitter)="updateMatchScore($event)">
+      <app-match [match]="match" [stages]="stages" [groupsDetails]="groupsDetails" [small]="false" (updatedMatchEmitter)="updateMatchResult($event)">
       </app-match>
     </div>
   </div>
