--- a/src/app/components/shared/group-table/group-table.component.html
+++ b/src/app/components/shared/group-table/group-table.component.html
@@ -6,7 +6,7 @@
         <th mat-header-cell *matHeaderCellDef>{{displayedColumnsText[i]}}</th>
         <td mat-cell *matCellDef="let team">
           <div class="group-table__flag" *ngIf="displayedColumn == 'flag'">
-            <img src="{{team.flag}}" alt="" class="team__flag--small">
+            <img src="/assets/flags/{{team.name}}.png" alt="" class="team__flag--small">
           </div>
           <div class="group-table__team-name" *ngIf="displayedColumn == 'name'">
             {{team.name}}
@@ -21,3 +21,4 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
 </div>
+
