--- a/src/app/components/shared/match/match.component.html
+++ b/src/app/components/shared/match/match.component.html
@@ -28,7 +28,7 @@
     </div>
   </div>
   <div class="team__name">{{matchDetails.fistTeam.name}}</div>
-  <img src="{{matchDetails.fistTeam.flag}}" alt="" class="team__flag--small">
+  <img src="/assets/flags/{{matchDetails.fistTeam.name}}.png" alt="" class="team__flag--small">
   <form>
     <mat-form-field class="match-score__input">
       <input matInput [(ngModel)]="matchDetails.fistTeam.goals"
@@ -46,7 +46,7 @@
              class="match-score__input__text">
     </mat-form-field>
   </form>
-  <img src="{{matchDetails.secondTeam.flag}}" alt="" class="team__flag--small">
+  <img src="/assets/flags/{{matchDetails.secondTeam.name}}.png" alt="" class="team__flag--small">
   <div class="team__name">{{matchDetails.secondTeam.name}}</div>
   <div class="match__container__small__date">
     {{matchDetails.date | date: "dd.MM.yyyy"}}
@@ -67,8 +67,7 @@
   </div>
   <div class="match__container__small__main">
     <div class="match__container__small_flag__name">
-      <img src="{{matchDetails.fistTeam.flag}}" alt="" class="team__flag--small">
-      <!--      <div class="team__name">{{matchDetails.fistTeam.name}}</div>-->
+      <img src="/assets/flags/{{matchDetails.fistTeam.name}}.png" alt="" class="team__flag--small">
     </div>
     <div class="cell">
       {{matchDetails.fistTeam.goals}}
@@ -78,8 +77,7 @@
       {{matchDetails.secondTeam.goals}}
     </div>
     <div class="match__container__small_flag__name">
-      <img src="{{matchDetails.secondTeam.flag}}" alt="" class="team__flag--small">
-      <!--      <div class="team__name">{{matchDetails.secondTeam.name}}</div>-->
+      <img src="/assets/flags/{{matchDetails.secondTeam.name}}.png" alt="" class="team__flag--small">
     </div>
   </div>
 </div>
