--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <div class="navbar">
   <div class="navbar__left">
-    <img src="assets/logo.png" class="navbar__left__logo" alt="">
-    <span class="navbar__left__title text--white">WM22</span>
+    <img src="assets/logos/Unbenannt-1.png" class="navbar__left__logo" alt="">
+    <span class="navbar__left__title text--white"></span>
   </div>
   <div class="navbar__right">
     <button mat-button class="navbar__button" (click)="navigateTo('home')">
