--- a/src/app/components/shared/group-table-predict/group-table-predict.component.html
+++ b/src/app/components/shared/group-table-predict/group-table-predict.component.html
@@ -1,9 +1,9 @@
 <div class="group-table" *ngIf="getDataSource()">
   <h1 class="group-table__header">{{'group' | translate}}: {{group}}</h1>
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-    <ng-container *ngFor="let displayedColumn of displayedColumns; let i = index">
+    <ng-container *ngFor="let displayedColumn of displayedColumns">
       <ng-container matColumnDef="{{displayedColumn}}">
-        <th mat-header-cell *matHeaderCellDef>{{displayedColumnsText[i]}}</th>
+        <th mat-header-cell *matHeaderCellDef></th>
         <td mat-cell *matCellDef="let team">
           <div class="group-table__flag" *ngIf="displayedColumn == 'flag'">
             <img src="/assets/flags/{{team.name}}.png" alt="" class="team__flag--small">
@@ -11,32 +11,22 @@
           <div class="group-table__team-name" *ngIf="displayedColumn == 'name'">
             {{team.name}}
           </div>
-          <div class="group-table__team__data" *ngIf="displayedColumn != 'flag' && displayedColumn != 'name'">
-            {{team[displayedColumn]}}
+          <div class="group-table__team__rank" *ngIf="displayedColumn == 'rank'">
+            <ng-container *ngFor="let rank of teamRanks">
+              <div *ngIf="rank.name == team.name" class="team__rank">{{rank.rank}}</div>
+            </ng-container>
           </div>
         </td>
       </ng-container>
     </ng-container>
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row
-        (click)="selectedTeams.add(row)"
+        (click)="teamClicked(row)"
         [class.selected-team-is-clicked]="selectedTeams.has(row)"
         *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
 </div>
 
-<div>
-  <h3>
-    Click Log
-  </h3>
-</div>
-
-<div *ngIf="!selectedTeams.size">
-  Selected Teams will be logged here
-</div>
-
-<ul>
-  <li *ngFor="let selectedTeam of selectedTeams">
-    Clicked on {{selectedTeam.name}}
-  </li>
-</ul>
+<button mat-stroked-button color="primary" (click)="clearSelection()">
+  <span class="material-icons">close</span>
+  Clear selection
+</button>
