--- a/src/app/components/shared/group-table-predict/group-table-predict.component.scss
+++ b/src/app/components/shared/group-table-predict/group-table-predict.component.scss
@@ -3,18 +3,21 @@
   background-color: white;
 }
 
-.group-table__team__data, .group-table__team-name, .group-table__header {
-  font-size: 0.8rem;
-}
-
-.group-table__team-name {
-  width: 5rem;
-  margin-right: 0.5rem;
-}
-
 .group-table__header {
   color: #fff;
   margin: 0 0 -2rem 1rem;
+  font-size: 0.8rem;
+}
+table {
+  border-top: 2rem var(--color-1) solid;
+  width: 10rem;
+  border-radius: 0.5rem;
+  background-color: transparent !important;
+}
+
+.group-table__team-name {
+  width: 7rem;
+  margin: 0 0.5rem;
 }
 
 .group-table__flag {
@@ -22,77 +25,37 @@
   justify-content: center;
 }
 
-table {
-  border-top: 2rem var(--color-1) solid;
-  width: 25rem;
-}
-
-tr {
-  height: 2.3rem !important;
-}
-
-// Padding beim Flagge weniger machen
-th.mat-header-cell:first-of-type, td.mat-cell:first-of-type, td.mat-footer-cell:first-of-type {
-  padding-left: 0.5rem !important;
-}
-
-// Padding beim Punkte weniger machen
-th.mat-header-cell:last-of-type, td.mat-cell:last-of-type, td.mat-footer-cell:last-of-type {
-  padding-right: 0 !important;
+.group-table__team__rank {
+  width: 3rem;
 }
 
 .mat-cell {
-  width: 10rem;
-}
-
-@media screen and (max-width: 600px) {
-  table {
-    width: 25rem;
-  }
-
-  // Padding beim Punkte weniger machen
-  th.mat-header-cell:last-of-type, td.mat-cell:last-of-type, td.mat-footer-cell:last-of-type {
-    padding-right: 0.3rem !important;
-  }
-}
-
-table.mat-table {
-  border-radius: 0.5rem;
-  background-color: transparent !important;
-}
-
-@media screen and (max-width: 450px) {
-  table {
-    width: 23rem;
-  }
-
-  th.mat-header-cell:nth-child(7), th.mat-header-cell:nth-child(8), td.mat-cell:nth-child(7), td.mat-cell:nth-child(8) {
-    display: none;
-  }
-
-  .group-table__team-name {
-    width: 9rem;
-  }
-}
-
-@media screen and (max-width: 400px) {
-  table {
-    width: 19rem;
-  }
-}
-
-////////////////
-.mat-row .mat-cell {
-  border-bottom: 1px solid transparent;
-  border-top: 1px solid transparent;
   cursor: pointer;
 }
 
 .mat-row:hover .mat-cell {
   border-color: var(--border-color);
-  background: whitesmoke;
+  background: rgba(206, 223, 255, 0.7);
 }
 
-.selected-team-is-clicked {
-  background: #ffeebd;
+.selected-team-is-clicked .mat-cell {
+  border-color: var(--border-color);
+  background: #cedfff;
+}
+
+.team__rank {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 1rem;
+  height: 1rem;
+  background: #f54343;
+  border-radius: 50%;
+  padding: 0.2rem;
+  color: white;
+}
+
+// Padding beim Rank weniger machen
+th.mat-header-cell:last-of-type, td.mat-cell:last-of-type, td.mat-footer-cell:last-of-type {
+  padding-right: 0 !important;
 }
