--- a/src/app/components/shared/group-table-predict/group-table-predict.component.scss
+++ b/src/app/components/shared/group-table-predict/group-table-predict.component.scss
@@ -40,7 +40,7 @@ table {
 
 .selected-team-is-clicked .mat-cell {
   border-color: var(--border-color);
-  background: #cedfff;
+  background: #f1d5d5;
 }
 
 .team__rank {
@@ -49,7 +49,7 @@ table {
   align-items: center;
   width: 1rem;
   height: 1rem;
-  background: #f54343;
+  background: #810843;
   border-radius: 50%;
   padding: 0.2rem;
   color: white;
