--- a/src/app/components/predict/predict.component.html
+++ b/src/app/components/predict/predict.component.html
@@ -1,17 +1,25 @@
-<div class="groups__container" id="groups_section">
-  <div *ngFor="let teamsGroupData of teamsGroupsData; let i = index">
-    <app-group-table-predict [teamsGroupData]="teamsGroupData" [group]="groups[i]"
-                             (sendSelectedTeams)="receiveSelectedTeamsGroups($event)">
-    </app-group-table-predict>
+<div class="groups__predict__info-groups">
+  <div class="predict__groups__info">
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda beatae commodi culpa doloremque ex explicabo
+    facilis id, in ipsum minima nihil optio perspiciatis qui quod sed sequi unde voluptates voluptatum!
   </div>
-</div>
-<!--
-<div class="knock-out-stages__container" id="k-o-stages_section">
-  <div class="k-o-stage">
-    <div class="k-o-stage__match" *ngFor="let match of roundOf16Matches">
-      <app-match [match]="match" [stages]="stages" [groupsDetails]="groupsDetails" [small]="true"></app-match>
+  <div class="groups__container">
+    <div *ngFor="let teamsGroupData of teamsGroupsData; let i = index">
+      <app-group-table-predict [teamsGroupData]="teamsGroupData" [group]="groups[i]"
+                               (sendGroupName)="receiveGroup($event)"
+                               (sendSelectedTeams)="receiveSelectedTeamsGroups($event)">
+      </app-group-table-predict>
     </div>
   </div>
+</div>
+<div class="knock-out-stages__container">
+  <!--  <div class="k-o-stage" *ngIf="roundOf16Matches != null">-->
+  <div class="k-o-stage">
+    <div class="k-o-stage__match" *ngFor="let match of roundOf16Matches">
+      <app-match-predict [match]="match"></app-match-predict>
+    </div>
+  </div>
+  <!--
   <div class="k-o-stage">
     <div *ngFor="let match of quarterFinalsMatches">
       <app-match [match]="match" [stages]="stages" [groupsDetails]="groupsDetails" [small]="true"></app-match>
@@ -34,5 +42,5 @@
       </app-match>
     </div>
   </div>
-</div>
 -->
+</div>
