--- a/src/app/components/predict/predict.component.scss
+++ b/src/app/components/predict/predict.component.scss
@@ -1,8 +1,27 @@
+.groups__predict__info-groups {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
 .groups__container {
   display: flex;
   flex-wrap: wrap;
   gap: 1rem;
   justify-content: center;
-  max-width: 123rem;
+  max-width: 61rem;
   margin: auto;
+}
+
+.predict__groups__info {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30rem;
+  height: fit-content;
+  background: #56042c;
+  color: white;
+  padding: 1rem;
+  margin: 2rem;
+  border-radius: 0.5rem;
 }
