--- a/src/app/components/shared/match-predict/match-predict.component.scss
+++ b/src/app/components/shared/match-predict/match-predict.component.scss
@@ -40,7 +40,7 @@
   border: 1px solid #00000026;
   margin: 0.5rem;
   background-color: white;
-  width: 10rem;
+  width: 12rem;
 }
 
 .match__container__small__header {
@@ -56,12 +56,27 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 0.5rem 0;
+  //margin: 0.5rem 0;
   width: 100%;
-  gap: 0.5rem;
+  //gap: 0.5rem;
 }
 
 .match-score__input {
   width: 1rem;
   text-align: center;
+}
+
+.match__container__small_flag__name {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  width: 100%;
+  padding: 1rem;
+  border-radius: 0.5rem;
+}
+
+.match__container__small_flag__name:hover {
+  background: rgb(86 4 44 / 15%);
 }
