Fill Quarter finals (muss noch getestet werden)

--- a/src/app/components/predict/predict.component.scss
+++ b/src/app/components/predict/predict.component.scss
@@ -25,3 +25,11 @@
   margin: 2rem;
   border-radius: 0.5rem;
 }
+
+.k-o-stage {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  //flex-direction: column;
+  flex-wrap: wrap;
+}
