--- a/src/app/components/shared/match-predict/match-predict.component.scss
+++ b/src/app/components/shared/match-predict/match-predict.component.scss
@@ -80,3 +80,7 @@
 .match__container__small_flag__name:hover {
   background: rgb(86 4 44 / 15%);
 }
+
+.team-selected {
+  background: rgb(86 4 44 / 15%);
+}
