--- a/src/app/components/predict/predict.component.html
+++ b/src/app/components/predict/predict.component.html
@@ -25,26 +25,22 @@
 
   <div class="k-o-stage">
     <div *ngFor="let match of quarterFinalsMatches">
+      <app-match-predict [match]="match" (selectedWinnerEmitter)="receiveSelectedWinner($event)"> </app-match-predict>
+    </div>
+  </div>
+  <div class="k-o-stage">
+    <div *ngFor="let match of semiFinalMatches">
       <app-match-predict [match]="match"></app-match-predict>
     </div>
   </div>
-  <!--
   <div class="k-o-stage">
-    <div *ngFor="let match of semiFinalsMatches">
-      <app-match [match]="match" [stages]="stages" [groupsDetails]="groupsDetails" [small]="true"></app-match>
-    </div>
+    <app-match-predict [match]="thirdPlaceMatch"></app-match-predict>
   </div>
   <div class="k-o-stage">
     <div>
-      <app-match [match]="thirdPlaceMatch" [stages]="stages" [groupsDetails]="groupsDetails"
-                 [small]="true"></app-match>
+    </div>
+    <div class="k-o-stage">
+      <app-match-predict [match]="finalMatch"></app-match-predict>
     </div>
   </div>
-  <div class="k-o-stage">
-    <div>
-      <app-match [match]="finalMatch" [stages]="stages" [groupsDetails]="groupsDetails" [small]="true">
-      </app-match>
-    </div>
-  </div>
--->
 </div>
