--- a/src/app/components/predict/predict.component.scss
+++ b/src/app/components/predict/predict.component.scss
@@ -26,3 +26,39 @@
   width: 10rem;
   margin: 2rem 0;
 }
+
+.old__predicted__group {
+  display: flex;
+  flex-direction: column;
+}
+
+.old__predicted__group__container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+}
+
+.old__predicted__group {
+  display: flex;
+  flex-direction: column;
+  border: solid black 1px;
+  gap: 1rem;
+}
+
+.old__predicted__group__row {
+  display: flex;
+  width: 10rem;
+  justify-content: space-between;
+}
+
+.team__rank {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 1rem;
+  height: 1rem;
+  background: #810843;
+  border-radius: 50%;
+  padding: 0.2rem;
+  color: white;
+}
