--- a/src/app/components/shared/match-predict/match-predict.component.html
+++ b/src/app/components/shared/match-predict/match-predict.component.html
@@ -1,11 +1,11 @@
 <div class="match__container__small">
   <div class="cell match__container__small__header">
-    {{match.id}} / {{match.stage}}
+    {{match.matchNumber}} / {{match.stage}}
   </div>
   <div class="match__container__small__main">
     <div class="match__container__small_flag__name"
          [ngClass]="selected1 ? 'team-selected' : 'not-selected'"
-         (click)="teamClicked(match.aId, match.aName, 'A')">
+         (click)="teamClicked('A')">
       <img src="/assets/flags/{{match.aName}}.png" alt="" class="team__flag--small"
            *ngIf="match.aName.length > 0">
       <div class="team__name">{{match.aName}}</div>
@@ -13,7 +13,7 @@
     <div class="cell">:</div>
     <div class="match__container__small_flag__name"
          [ngClass]="selected2 ? 'team-selected' : 'not-selected'"
-         (click)="teamClicked(match.bId, match.bName, 'B')">
+         (click)="teamClicked('B')">
       <img src="/assets/flags/{{match.bName}}.png" alt="" class="team__flag--small"
            *ngIf="match.bName.length > 0">
       <div class="team__name">{{match.bName}}</div>
